--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
         <![endif]-->
         <canvas id="gameCanvas" style='position:absolute; left:0px; top:0px;'></canvas>
         <h2 id="score">Score: 0</h2>
-        <script src="script.js"></script>
+        <script src="script.js" type="module"></script>
     </body>
 </html>
