--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <body>
         <canvas id="gameCanvas" style='position:absolute; left:0px; top:0px;'></canvas>
         <h2 id="score">Score: 0</h2>
-        <script src="main.js" type="module"></script>
+        <script src="js/main.js" type="module"></script>
     </body>
 </html>
