--- a/index.html
+++ b/index.html
@@ -19,11 +19,17 @@
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
                 font-size: 20px;
             }
+            #gameCanvas {
+                width: 200;
+                height: 200;
+            }
         </style>
     </head>
     <body>
         <canvas id="gameCanvas" style='position:absolute; left:0px; top:0px;'></canvas>
         <h2 id="score">Score: 0</h2>
+        <button id="dfs-button">DFS</button>
+        <button id="hamilton-button">Hamilton Cycle</button>
         <script src="js/main.js" type="module"></script>
     </body>
 </html>
